add function to get greeks and interest rates

--- a/pysql_test.ipynb
+++ b/pysql_test.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "typical-breast",
+   "id": "revised-biotechnology",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "stretch-cornwall",
+   "id": "extended-camcorder",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "fancy-spell",
+   "id": "ready-facial",
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +238,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "finite-moisture",
+   "id": "indirect-battle",
    "metadata": {},
    "outputs": [
     {
@@ -259,7 +259,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "nearby-association",
+   "id": "anticipated-brand",
    "metadata": {},
    "outputs": [
     {
@@ -296,7 +296,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "republican-bristol",
+   "id": "norman-heath",
    "metadata": {},
    "outputs": [
     {
@@ -489,7 +489,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "competent-theater",
+   "id": "former-publicity",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -520,7 +520,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "efficient-jimmy",
+   "id": "exciting-moscow",
    "metadata": {},
    "outputs": [
     {
@@ -542,7 +542,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "military-postcard",
+   "id": "intensive-sperm",
    "metadata": {},
    "outputs": [
     {
@@ -629,7 +629,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "double-average",
+   "id": "surprised-masters",
    "metadata": {},
    "outputs": [
     {
@@ -742,11 +742,12 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "drawn-settlement",
+   "id": "bizarre-sixth",
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_orderbook_data(df_to_append_to, instrument_name):\n",
+    "    #use this to get relevant information from deribit: i.e greeks, open interest,& interest rate\n",
     "    get_orderbook_url = \"https://test.deribit.com/api/v2/public/get_order_book?depth=5&instrument_name=\"\n",
     "    get_orderbook_url += instrument_name\n",
     "    with urllib.request.urlopen(get_orderbook_url) as get_orderbook_url:\n",
@@ -759,209 +760,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "accomplished-animal",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>underlying_price</th>\n",
-       "      <th>underlying_index</th>\n",
-       "      <th>timestamp</th>\n",
-       "      <th>stats</th>\n",
-       "      <th>state</th>\n",
-       "      <th>settlement_price</th>\n",
-       "      <th>open_interest</th>\n",
-       "      <th>min_price</th>\n",
-       "      <th>max_price</th>\n",
-       "      <th>mark_price</th>\n",
-       "      <th>...</th>\n",
-       "      <th>estimated_delivery_price</th>\n",
-       "      <th>change_id</th>\n",
-       "      <th>bids</th>\n",
-       "      <th>bid_iv</th>\n",
-       "      <th>best_bid_price</th>\n",
-       "      <th>best_bid_amount</th>\n",
-       "      <th>best_ask_price</th>\n",
-       "      <th>best_ask_amount</th>\n",
-       "      <th>asks</th>\n",
-       "      <th>ask_iv</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>54836.6</td>\n",
-       "      <td>BTC-26MAR21</td>\n",
-       "      <td>1615306097945</td>\n",
-       "      <td>{'volume': None, 'price_change': None, 'low': ...</td>\n",
-       "      <td>open</td>\n",
-       "      <td>0.09</td>\n",
-       "      <td>174.5</td>\n",
-       "      <td>0.017</td>\n",
-       "      <td>0.4165</td>\n",
-       "      <td>0.216825</td>\n",
-       "      <td>...</td>\n",
-       "      <td>54234.6</td>\n",
-       "      <td>5449196118</td>\n",
-       "      <td>[[0.001, 0.4]]</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.001</td>\n",
-       "      <td>0.4</td>\n",
-       "      <td>0.336</td>\n",
-       "      <td>30</td>\n",
-       "      <td>[[0.336, 30.0]]</td>\n",
-       "      <td>400.01</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>1 rows × 26 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  underlying_price underlying_index      timestamp  \\\n",
-       "0          54836.6      BTC-26MAR21  1615306097945   \n",
-       "\n",
-       "                                               stats state settlement_price  \\\n",
-       "0  {'volume': None, 'price_change': None, 'low': ...  open             0.09   \n",
-       "\n",
-       "  open_interest min_price max_price mark_price  ... estimated_delivery_price  \\\n",
-       "0         174.5     0.017    0.4165   0.216825  ...                  54234.6   \n",
-       "\n",
-       "    change_id            bids bid_iv best_bid_price best_bid_amount  \\\n",
-       "0  5449196118  [[0.001, 0.4]]      0          0.001             0.4   \n",
-       "\n",
-       "  best_ask_price best_ask_amount             asks  ask_iv  \n",
-       "0          0.336              30  [[0.336, 30.0]]  400.01  \n",
-       "\n",
-       "[1 rows x 26 columns]"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "greeks = pd.DataFrame()\n",
-    "for i in no_stale['instrument_name']:\n",
-    "    greeks = get_orderbook_data(greeks, i)\n",
-    "greeks.head(n=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 13,
-   "id": "judicial-building",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>vega</th>\n",
-       "      <th>theta</th>\n",
-       "      <th>rho</th>\n",
-       "      <th>gamma</th>\n",
-       "      <th>delta</th>\n",
-       "      <th>underlying_price</th>\n",
-       "      <th>underlying_index</th>\n",
-       "      <th>open_interest</th>\n",
-       "      <th>interest_rate</th>\n",
-       "      <th>mark_iv</th>\n",
-       "      <th>vanna</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>44.73626</td>\n",
-       "      <td>-335.85725</td>\n",
-       "      <td>10.00157</td>\n",
-       "      <td>0.00001</td>\n",
-       "      <td>0.61639</td>\n",
-       "      <td>54836.6</td>\n",
-       "      <td>BTC-26MAR21</td>\n",
-       "      <td>174.5</td>\n",
-       "      <td>0</td>\n",
-       "      <td>250.17</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       vega      theta       rho    gamma    delta underlying_price  \\\n",
-       "0  44.73626 -335.85725  10.00157  0.00001  0.61639          54836.6   \n",
-       "\n",
-       "  underlying_index open_interest interest_rate mark_iv  vanna  \n",
-       "0      BTC-26MAR21         174.5             0  250.17    NaN  "
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "columns = greeks.loc[:, ['underlying_price','underlying_index', 'open_interest','interest_rate', 'mark_iv', 'greeks']]\n",
-    "greeks = pd.DataFrame(columns['greeks'].values.tolist())\n",
-    "columns = columns.drop(['greeks'], axis = 1)\n",
-    "greeks = greeks.join(columns)\n",
-    "#greeks['underlying_price', 'open_interest','mark_iv'] = columns['underlying_price', 'open_interest','mark_iv']\n",
-    "greeks['vanna'] = np.nan\n",
-    "greeks"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "changing-addition",
+   "id": "latin-crime",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def get_greeks(active_trades):\n",
+    "    greeks = pd.DataFrame()\n",
+    "    for i in active_trades['instrument_name']:\n",
+    "        greeks = get_orderbook_data(greeks, i)\n",
+    "    columns = greeks.loc[:, ['underlying_price','underlying_index', 'open_interest','interest_rate', 'mark_iv', 'greeks']]\n",
+    "    greeks = pd.DataFrame(columns['greeks'].values.tolist())\n",
+    "    columns = columns.drop(['greeks'], axis = 1)\n",
+    "    greeks = greeks.join(columns)\n",
+    "    greeks['vanna'] = np.nan\n",
+    "    return greeks"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "mathematical-folks",
+   "execution_count": 17,
+   "id": "virgin-insider",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "greeks = get_greeks(no_stale)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "applicable-transfer",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -972,8 +801,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "vietnamese-roots",
+   "execution_count": 19,
+   "id": "interpreted-scanning",
    "metadata": {},
    "outputs": [
     {
@@ -982,7 +811,7 @@
        "0.0001"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -993,8 +822,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "floppy-aggregate",
+   "execution_count": 20,
+   "id": "recent-devon",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1021,8 +850,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "athletic-davis",
+   "execution_count": 21,
+   "id": "further-trunk",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1031,8 +860,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "strong-bahamas",
+   "execution_count": 22,
+   "id": "casual-player",
    "metadata": {},
    "outputs": [
     {
@@ -1111,7 +940,7 @@
        "0      10   10   10     0   54000   16  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1122,8 +951,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "coated-extent",
+   "execution_count": 23,
+   "id": "brilliant-cameroon",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1134,8 +963,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "fabulous-selection",
+   "execution_count": 24,
+   "id": "alternate-massachusetts",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1144,8 +973,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "lonely-argentina",
+   "execution_count": 25,
+   "id": "fossil-anchor",
    "metadata": {},
    "outputs": [
     {
@@ -1155,7 +984,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
